# edge-ai-lab

./: .gitignore  .gitmodules  README.md
esp/docs/superpowers/plans/: 2026-04-28-esp32s3-oled-ui-astra-port.md
esp/docs/superpowers/specs/: 2026-04-28-esp32s3-oled-ui-astra-port-design.md
esp/oled-ui-astra-esp32s3/: AGENTS.md  README.md  sdkconfig.defaults
esp/oled-ui-astra-esp32s3/components/astra/: CMakeLists.txt
esp/oled-ui-astra-esp32s3/main/: CMakeLists.txt  main.cpp
esp/tft_touch_s3/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig.defaults
esp/tft_touch_s3/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lcd_touch.h  main.c  sys_stats.c  sys_stats.h
esp/tft_touch_s3/main/assistant/: assistant.c  assistant.h  assistant_proto.c  assistant_proto.h  assistant_state.c  assistant_state.h
esp/tft_touch_s3/main/audio/: audio_io.c  audio_io.h  audio_service.c  audio_service.h
esp/tft_touch_s3/main/connectivity/: app_net_state.c  app_prov.c  app_prov.h  app_wifi.c
esp/tft_touch_s3/main/hal/: btn.c  btn.h  led_status.c  led_status.h
esp/tft_touch_s3/main/ui/: ui_config.h  ui_main.c  ui_page_ai.c  ui_page_ai.h  ui_page_home.c  ui_page_network.c  ui_page_settings.c
sources/meta-cis/: readme.txt
sources/oled-ui-astra/: .cproject  .gitignore  .project  CLAUDE.md  README.md  astra Debug.launch
sources/oled-ui-astra-esp32s3/: AGENTS.md  CMakeLists.txt  sdkconfig
sources/oled-ui-astra-esp32s3/components/hal_esp32s3/: CMakeLists.txt  hal_esp32s3.cpp  hal_oled.cpp
sources/oled-ui-astra-esp32s3/components/hal_esp32s3/hal/: hal.h
sources/oled-ui-astra-esp32s3/components/hal_esp32s3/u8g2/: u8g2_font_myfont.c
sources/sensors/: .gitignore  AGENTS.md  CLAUDE.md  README.md  stm32f103.uvprojx  stm32f103_STM32F103.dep  stm32f103_uvoptx.bak  stm32f103_uvprojx.bak  项目介绍与教程.md
sources/sensors/OLED/: oled.c  oled.h  oledfont.h
sources/sensors/user/: main.c
sources/tft_touch_s3/: AGENTS.md  README.md  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old
sources/tft_touch_s3/main/: Kconfig.projbuild  idf_component.yml  lcd_touch.c  main.c  settings_store.c  settings_store.h
(+606 files in other folders)
